[eclipse-platform#1668] simplify work with launch attributes
* identify launch attribute
* connect it with preference metadata (to supply
defaults/label/description)
* read attribute from configuration
* write attribute to configuration working copy
* demonstrate usage for ExternalTools

--- a/debug/org.eclipse.ui.externaltools/External Tools Base/org/eclipse/ui/externaltools/internal/launchConfigurations/ExternalToolsLaunchConfigurationMessages.properties
+++ b/debug/org.eclipse.ui.externaltools/External Tools Base/org/eclipse/ui/externaltools/internal/launchConfigurations/ExternalToolsLaunchConfigurationMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2010 IBM Corporation and others.
+# Copyright (c) 2000, 2025 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -11,6 +11,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 #     dakshinamurthy.karra@gmail.com - bug 165371
+#     Alexander Fedorov (ArSysOp) - API to process launch configuration attributes
 ###############################################################################
 
 ExternalToolsMainTab__Location___2=&Location:
@@ -19,7 +20,6 @@ ExternalToolsMainTab_Brows_e_File_System____4=Brows&e File System...
 ExternalToolsMainTab_Working__Directory__5=Working &Directory:
 ExternalToolsMainTab_Browse_Wor_kspace____6=Browse Wor&kspace...
 ExternalToolsMainTab_Browse_F_ile_System____7=Browse File Syste&m...
-ExternalToolsMainTab_Error_reading_configuration_10=Error reading configuration
 ExternalToolsMainTab__Main_17=Main
 ExternalToolsMainTab_External_tool_location_cannot_be_empty_18=External tool location cannot be empty
 ExternalToolsMainTab_External_tool_location_does_not_exist_19=External tool location does not exist
@@ -30,7 +30,6 @@ ExternalToolsMainTab_23=Select a working directory:
 ExternalToolsMainTab__Arguments___1=&Arguments:
 ExternalToolsMainTab_Varia_bles____2=Variable&s...
 ExternalToolsMainTab_3=Note: Enclose an argument containing spaces using double-quotes (\").
-ExternalToolsMainTab_Error_reading_configuration_7=Error reading configuration
 ExternalToolsMainTab_Not_a_directory=The specified location is not a directory
 ExternalToolsMainTab_30=Please specify the location of the external tool you would like to configure.
 ExternalToolsMainTab_31=Var&iables...
