--- a/debug/org.eclipse.core.externaltools/src/org/eclipse/core/externaltools/internal/launchConfigurations/ExternalToolsProgramMessages.properties
+++ b/debug/org.eclipse.core.externaltools/src/org/eclipse/core/externaltools/internal/launchConfigurations/ExternalToolsProgramMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2025 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -10,6 +10,7 @@
 #
 # Contributors:
 #     IBM Corporation - initial API and implementation
+#     Alexander Fedorov (ArSysOp) - API to process launch configuration attributes
 ###############################################################################
 
 BackgroundResourceRefresher_0=Refreshing resources...
@@ -21,3 +22,6 @@ ProgramLaunchDelegate_5=[pid: {0}]
 ExternalToolsUtil_Location_not_specified_by__0__1=Location not specified by {0}
 ExternalToolsUtil_invalidLocation__0_ = The file does not exist for the external tool named {0}.
 ExternalToolsUtil_invalidDirectory__0_ = The working directory {0} does not exist for the external tool named {1}.
+LaunchAttributeArguments_name=Arguments
+LaunchAttributeLocation_name=Location
+LaunchAttributeWorkingDirectory_name=Working Directory
