Do not add source folders in src.includes
They are automatically included so this is redundant.

--- a/ant/org.eclipse.ant.launching/build.properties
+++ b/ant/org.eclipse.ant.launching/build.properties
@@ -34,9 +34,7 @@ extra.lib/loggers.jar = lib/antdebug.jar
 #output.lib/antdebug.jar = common_bin/
 #source.lib/remote.jar = remote/
 #output.lib/remote.jar = remote_bin/
-src.includes = about.html,\
-               remote/,\
-               common/
+src.includes = about.html
 javacWarnings..=-unavoidableGenericProblems
 
 # Maven properties, see https://github.com/eclipse/tycho/wiki/Tycho-Pomless
