--- a/ant/org.eclipse.ant.ui/build.properties
+++ b/ant/org.eclipse.ant.ui/build.properties
@@ -21,9 +21,7 @@ output.lib/antrunner.jar = ant_runner_support_bin/
 #source.lib/remoteAnt.jar = Remote Ant Support/
 #output.lib/remoteAnt.jar = remote_support_bin/
 src.includes = about.html,\
-               about_files/,\
-               Remote Ant Support/
-
+               about_files/
 bin.includes = icons/,\
                plugin.properties,\
                plugin.xml,\
