Add shortcut to rename breakpoints and select all text in inline editor
Improve usability of custom breakpoint label by mapping the F2 key to
rename breakpoints, aligning with the standard convention for renaming
items across platforms and select all texts in current breakpoint label
on opening the inline editor

--- a/debug/org.eclipse.debug.ui/plugin.properties
+++ b/debug/org.eclipse.debug.ui/plugin.properties
@@ -418,5 +418,7 @@ debug.core.component.label = Platform Debug Core
 GroupLaunch.description=Launch several other configurations sequentially
 
 prototype.decorator.label = Prototype Decorator
-breakpointLabel.label=Label
-breakpointLabel.tooltip=Provide a custom label to quickly identify breakpoint
+breakpointLabel.label= Label
+breakpointLabel.tooltip= Provide a custom label to quickly identify breakpoint
+breakpointLabelCommand = EditBreakpointLabel
+breakpointLabelCommand.description = Opens inline editor to change breakpoint label
