Prompt when launching debug session with 'Skip All Breakpoints' enabled
This commit adds a warning prompt when user launch application in debug
mode with `Skip All Breakpoints` enabled

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -57,6 +57,7 @@ DebugPreferencePage_31=&Prompt for confirmation when removing all triggerpoints
 DebugPreferencePage_32=&Prompt for confirmation when disabling all breakpoints
 DebugPreferencePage_5=Prompt for confirmation when deleting all e&xpressions
 DebugPreferencePage_showValuesInline=Show debug values &inline on text editors (Experimental)
+DebugPreferencePage_PromptSkipBreakpoints=Prompt when launching application in debug mode with 'Skip Breakpoints' enabled
 
 LaunchingPreferencePage_1=&Build (if required) before launching
 LaunchingPreferencePage_2=Save required dirty editors before launching
@@ -175,3 +176,4 @@ DefaultLaunchConfigurationsPropertiesPage_9=Delete selected launch configuration
 DefaultLaunchConfigurationsPropertiesPage_11=Select Configuration Type
 DefaultLaunchConfigurationsPropertiesPage_12=&Select the type of configuration to create:
 RunDebugPropertiesPage_0=There was a problem trying to edit {0}
+
