Add filter field and sort launches
This commit adds a filter field to filter the launches and sorts shown
in debug/run 'Add to favorite' dialog and sorts the launches based on
launch type

Fixes : https://github.com/eclipse-platform/eclipse.platform/issues/2113

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -284,3 +284,4 @@ SelectLaunchersDialog_2=This dialog allows you to specify which launcher to use 
 SelectLaunchersDialog_4=<a href="ws">Change Workspace Settings...</a>
 SelectLaunchersDialog_5=Description
 SelectLaunchersDialog_launchers=Launc&hers:
+SelectFavTypeToFilter= Type to filter
