Externalize hardcoded strings for consistency and reuse
Externalized strings in core.internal.variables package to eliminate
redundancy and enhance code maintainability.

--- a/debug/org.eclipse.core.variables/src/org/eclipse/core/internal/variables/VariablesMessages.properties
+++ b/debug/org.eclipse.core.variables/src/org/eclipse/core/internal/variables/VariablesMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2005 IBM Corporation and others.
+# Copyright (c) 2000, 2025 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -19,3 +19,19 @@ StringVariableManager_26=Variables with the specified names are already register
 StringVariableManager_27=Variable named {0} already registered
 
 DynamicVariable_0=Unsupported argument {0} specified for variable {1}
+VarMissingResolver=Contributed context variable {0} must specify a resolver.
+VarResolverNotIContextVariableResolver=Contributed context variable resolver for {0} must be an instance of IContextVariableResolver.
+VarEvalError=Error while evaluating variable {0}.
+
+VarInitFailDueNonIValueVariable=Unable to initialize variable {0} - initializer must be an instance of IValueVariableInitializer.
+VarInitFail=Unable to initialize variable {0}
+
+StringVarExceptionOnChange=An exception occurred during string variable change notification
+StringVarMissingNameExt=Variable extension missing required 'name' attribute: {0}
+StringVarExtOverridesOnBundles=Dynamic variable extension from bundle ''{0}'' overrides existing extension variable ''{1}'' from bundle ''{2}''
+StringVarContExtOverridesOnBundles=Contributed variable extension from bundle ''{0}'' overrides existing extension variable ''{1}'' from  bundle ''{2}''
+StringVarExceptionOnLoad=An exception occurred while loading persisted value variables.
+StringVarInvalidFormat=Invalid format encountered while loading persisted value variables.
+StringVarInvalidXML=Invalid XML element encountered while loading value variables: {0}
+StringVarNameNull=Invalid variable entry encountered while loading value variables. Variable name is null.
+StringVarLaunchExcep=An exception occurred while storing launch configuration variables.
