org.mortbay.jasper.apache-jsp -> org.mortbay.jasper.mortbay-apache-jsp
- The org.mortbay.jasper.apache-jsp artifact was relocated in Maven
Central and also changes its BSN.

https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/pull/3282

--- a/ua/org.eclipse.ua.tests/pom.xml
+++ b/ua/org.eclipse.ua.tests/pom.xml
@@ -62,7 +62,7 @@
 	            </requirement>
 				<requirement>
 					<type>eclipse-plugin</type>
-					<id>org.mortbay.jasper.apache-jsp</id>
+					<id>org.mortbay.jasper.mortbay-apache-jsp</id>
 					<versionRange>0.0.0</versionRange>
 				</requirement>
 	          </extraRequirements>
