Add configurable elapsed time display with format customization
This commit introduces a Combo selection in Console settings to choose
different formatting options for elapsed time shown on the console
output or disable it entirely

fixes : https://github.com/eclipse-platform/eclipse.platform/issues/2112

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2022 IBM Corporation and others.
+# Copyright (c) 2000, 2025 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -31,6 +31,10 @@ ConsolePreferencePage_11=Back&ground color:
 ConsolePreferencePage_Interpret_control_characters=Interpret ASCII &control characters
 ConsolePreferencePage_Interpret_cr_as_control_character=Interpret Carriage &Return (\\r) as control character 
 ConsolePreferencePage_Enable_Word_Wrap_text=E&nable word wrap
+ConsoleElapsedTimeLabel=Elapsed Time Format (Choose 'None' to disable)
+ConsoleDefaultElapsedTimeFormat=%d:%02d:%02d
+ConsoleElapsedTimeToolTip=Supports formats like: 'H:MM:SS.mmm', 'MMm SSs', 'H:MM:SS' \nYou can also use positional parameters \n%1$ = (H)hours\n%2$ = (M)minutes\n%3$ = (S)seconds\n%4$ = (mmm)milliseconds
+ConsoleDisableElapsedTime=None
 
 DebugPreferencePage_1=General Settings for Running and Debugging.
 DebugPreferencePage_2=Re&use editor when displaying source code
