Update Skip Breakpoints text values

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
@@ -289,6 +289,6 @@ ExpressionManagerContentProvider_1=Add new expression
 
 LaunchShortcutAction_combineLaunchShortcutName={0} ({1})
 
-skipBreakpointWarningTitle = Breakpoints set to skip
-skipBreakpointWarningLabel = Breakpoints are disabled due to 'Skip All Breakpoints' being active. Debugger will continue without stopping.
+skipBreakpointWarningTitle = Breakpoints Set to Skip
+skipBreakpointWarningLabel = Breakpoints are disabled due to 'Skip All Breakpoints' being active. The debugger will continue without stopping.
 skipBreakpointWarningToggle1 = Do not show this warning
