--- a/platform/org.eclipse.platform/build.properties
+++ b/platform/org.eclipse.platform/build.properties
@@ -30,8 +30,8 @@ bin.includes = about.html,\
                plugin.properties,\
                splash.png,\
                intro/,\
-               platform.jar,\
                META-INF/,\
+               .,\
                narrow_book.css,\
                disabled_book.css,\
                book.css,\
@@ -50,9 +50,9 @@ bin.includes = about.html,\
                org.eclipse.ui.intro.universal.solstice/,\
                keys/, \
                icons/
+source.. = src-intro
+output.. = bin
 src.includes = about.html
-source.platform.jar = src-intro/
-output.platform.jar = bin-intro/
 
 # Maven properties, see https://github.com/eclipse/tycho/wiki/Tycho-Pomless
 tycho.pomless.parent = ../../
