--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-#  Copyright (c) 2000, 2022 IBM Corporation and others.
+#  Copyright (c) 2000, 2025 IBM Corporation and others.
 #
 #  This program and the accompanying materials
 #  are made available under the terms of the Eclipse Public License 2.0
@@ -92,6 +92,7 @@ LaunchConfigurationTabGroupViewer_15=More than one launcher available - <a>Selec
 LaunchConfigurationTabGroupViewer_16=Using {0} - <a>Select other...</a>
 LaunchConfigurationTabGroupViewer_17=Multiple launchers available - <a>Select one...</a>
 LaunchConfigurationTabGroupViewer_18=Multiple launchers available - select one to continue
+LaunchConfigurationTabGroupViewer_19=- Press the 'Import' button to import external configurations.
 
 LaunchConfigurationDialog_Create__manage__and_run_launch_configurations_8=Create, manage, and run configurations
 LaunchConfigurationDialog_Discard_changes__38=Discard changes?
@@ -149,6 +150,7 @@ LaunchConfigurationSelectionDialog_1=&Select a configuration to launch:
 LaunchConfigurationView_0=Filter matched {0} of {1} items
 LaunchConfigurationsDialog_c_ancel=Cancel
 LaunchConfigurationSelectionDialog_deleteButtonLabel=&Delete
+LaunchConfigurationImportDialog=Import launch configuration
 
 # {0} is substituted with a launch mode - possible values include run, debug, profile, or
 # any label of a contributed ILaunchMode.
@@ -195,6 +197,7 @@ CreateLaunchConfigurationPrototypeAction_New_prototype_2=New_prototype
 LinkPrototypeAction_Link_prototype_1=&Link Prototype...
 UnlinkPrototypeAction_Unlink_prototype_1=&Unlink Prototype
 ResetWithPrototypeValuesAction_Reset_with_prototype_values_1=&Reset with Prototype Values
+ImportLaunchConfigurationAction=Import
 
 EnvironmentTab_Variable_1=Variable
 EnvironmentTab_Value_2=Value
