Fix Add to run/debug favorite not showing
This commit fixes Add to run/debug favorite not showing in launch
contexts and updates labels for launches if its already exists in
run/debug config

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -16,6 +16,7 @@
 AddToFavoritesAction_1=Add to {0} &Favorites
 AddToFavoritesAction_2=Error
 AddToFavoritesAction_3=Unable to add to favorites.
+RemoveFromFavoritesAction=Remove from {0} Favorites
 
 ChangeVariableValue_errorDialogMessage=Setting the value failed.
 ChangeVariableValue_errorDialogTitle=Setting Value
