--- a/team/tests/org.eclipse.compare.tests/build.properties
+++ b/team/tests/org.eclipse.compare.tests/build.properties
@@ -28,4 +28,4 @@ output.. = bin/
 
 # Maven/Tycho pom model adjustments
 pom.model.property.testClass = org.eclipse.compare.tests.AllCompareTests
-pom.model.property.tycho.surefire.useUIHarness = true
+pom.model.property.tycho.surefire.useUIHarness = false
