--- a/team/tests/org.eclipse.compare.tests/pom.xml
+++ b/team/tests/org.eclipse.compare.tests/pom.xml
@@ -45,20 +45,26 @@
 					<!-- <printBundles>true</printBundles> -->
 					  
 					<!-- To see debug messages of the internals, will also be printed with -X -->
-					<!--  <printDebug>true</printDebug> -->
+					<!-- <printDebug>true</printDebug> -->
 					 
 					<!-- Scan classpath can be disabled if other discovery is wanted -->
 					<!-- <scanClasspath>false</scanClasspath> -->
-					
+
 					<!-- For example we can select individual classes here -->
 					<!-- <selectClass>-->
-					<!-- 	<test>org.eclipse.demo.tycho.test.CalculatorServiceTest</test> -->
+					<!--
+					<test>org.eclipse.demo.tycho.test.CalculatorServiceTest</test> -->
 					<!--</selectClass> -->
+					
+					<config>
+						<!-- Needed to discover extensions automatically -->
+						<junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
+					</config>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<!-- The console and the engine is only required at test execution time -->
 		<dependency>
@@ -72,6 +78,12 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.14.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.platform</groupId>
+			<artifactId>org.eclipse.platform.testing</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
