Add Support for Expression Pinning
This commit add a new option to pin an expression with current active
context, making the expression always be evaluating with the pinned
context

--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -238,3 +238,6 @@ VirtualFindAction_1=Unable to locate {0} in viewer
 ToggleBreakpointsTargetManager_defaultToggleTarget_name = Default
 ToggleBreakpointsTargetManager_defaultToggleTarget_description = Default
 BreakpointLabelDialog=Provide a custom label, or blank for the default label
+
+ExpressionsRemovePin=Remove Pinned Context
+ExpressionsPinContext=Pin Evaluation Context
