--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -94,7 +94,7 @@ LaunchConfigurationTabGroupViewer_17=Multiple launchers available - <a>Select on
 LaunchConfigurationTabGroupViewer_18=Multiple launchers available - select one to continue
 LaunchConfigurationTabGroupViewer_19=- Press the 'Import' button to import external configurations.
 
-LaunchConfigurationDialog_Create__manage__and_run_launch_configurations_8=Create, manage, and run configurations
+LaunchConfigurationDialog_Create__manage__and_run_launch_configurations_8=Create, manage, and {0} configurations
 LaunchConfigurationDialog_Discard_changes__38=Discard changes?
 LaunchConfigurationDialog_Do_you_wish_to_discard_changes_37=\nDo you wish to discard changes?\n
 LaunchConfigurationDialog_Error_19=Error
