"Auto pin" behavior for opening new Console view from existing Console
- Added "auto pin behavior" for the Console view. If user opens a new
Console view from opened Console, it will raise the question if Consoles
should be pinned or not.
- Added new preference to the ConsolePreferencePage
- Bu default the preference will be enabled

See https://github.com/eclipse-platform/eclipse.platform/pull/2240

--- a/debug/org.eclipse.ui.console/src/org/eclipse/ui/internal/console/ConsoleMessages.properties
+++ b/debug/org.eclipse.ui.console/src/org/eclipse/ui/internal/console/ConsoleMessages.properties
@@ -59,3 +59,6 @@ PatternMatchListenerExtension_3=Console Pattern Match Listener
 PatternMatchListenerExtension_4=contributed by
 PatternMatchListenerExtension_5=is missing required enablement expression and will be removed
 UpdatingConsoleState=Updating console state
+TurnOnAutoPinDialogMessage=To see updates of different console pages in parallel, both current and new Console view will be pinned now.
+TurnOnAutoPinDialogTitle=Pin Console views?
+TurnOnAutoPinRememberDecision=Remember my decision
