Use eclipse32.svg for the branding image not eclipse32.png
https://github.com/eclipse-platform/eclipse.platform/issues/2261

--- a/resources/bundles/org.eclipse.core.tools.resources/build.properties
+++ b/resources/bundles/org.eclipse.core.tools.resources/build.properties
@@ -14,5 +14,12 @@
 source.. = src/
 output.. = bin/
 src.includes=*.html
-bin.includes=plugin.xml,icons/,doc/,*.html,.options, META-INF/,.
+bin.includes = plugin.xml,\
+               icons/,\
+               doc/,\
+               *.html,\
+               .options,\
+               META-INF/,\
+               .,\
+               eclipse32.svg
 qualifier=context
