--- a/ua/org.eclipse.help.base/build.properties
+++ b/ua/org.eclipse.help.base/build.properties
@@ -24,9 +24,9 @@ bin.includes = doc/,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse32.png,\
                META-INF/,\
-               ant_tasks/helpbase-ant.jar
+               ant_tasks/helpbase-ant.jar,\
+               eclipse32.svg
                
 jars.compile.order = .,\
                      ant_tasks/helpbase-ant.jar
