--- a/runtime/bundles/org.eclipse.core.tools/build.properties
+++ b/runtime/bundles/org.eclipse.core.tools/build.properties
@@ -23,5 +23,6 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.ini,\
                about.mappings,\
-               about.properties
+               about.properties,\
+               eclipse32.svg
 qualifier=context
