Some Colors and Fonts entries already provide user facing descriptions via ThemeElementCategory, while others do not. This change uses the existing descriptions to display in the description box and adds description for ones that doesn't have any entries to ensure the description area is not left empty and that available descriptions are consistently utilised. This aligns with the standard usage elsewhere in Eclipse preference pages.
The main change pertaining to this has been merged in
eclipse.platform.ui via
https://github.com/eclipse-platform/eclipse.platform.ui/pull/3666
and the remaining part is addressed via this change.

--- a/debug/org.eclipse.debug.ui/plugin.properties
+++ b/debug/org.eclipse.debug.ui/plugin.properties
@@ -213,6 +213,8 @@ ActionDefinition.toggleStepFilters.description= Toggles enablement of debug step
 ActionDefinition.stepInto.name= Step Into
 ActionDefinition.stepInto.description= Step into
 
+org.eclipse.debug.ui.presentation.description = Colors and fonts used for debug sessions, breakpoints and variables.
+
 ActionDefinition.stepOver.name= Step Over
 ActionDefinition.stepOver.description= Step over
 
