--- a/team/bundles/org.eclipse.compare/plugin.properties
+++ b/team/bundles/org.eclipse.compare/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2025 IBM Corporation and others.
+# Copyright (c) 2000, 2026 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -166,6 +166,8 @@ ComparePreferencePage.workingCopy= line 1\nline 2\nline 3\nadded words in line 4
 ComparePreferencePage.colorAndFontLink=See <a>''{0}''</a> preferences for text compare colors and fonts.
 
 textCompareAppearance.label=Text Compare
+
+org.eclipse.compare.contentmergeviewer.TextMergeViewer=Colors and fonts used in compare editors to indicate differences, conflicts, and changes.
 
 compareIncomingColor.label= Incoming change color
 compareIncomingColor.description= The color used to indicate an incoming change in compare and merge tools.
