--- a/team/bundles/org.eclipse.compare/plugin.xml
+++ b/team/bundles/org.eclipse.compare/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <!--
-    Copyright (c) 2001, 2019 IBM Corporation and others.
+    Copyright (c) 2001, 2026 IBM Corporation and others.
 
     This program and the accompanying materials
     are made available under the terms of the Eclipse Public License 2.0
@@ -30,6 +30,9 @@
       <themeElementCategory
             label="%textCompareAppearance.label"
             id="org.eclipse.compare.contentmergeviewer.TextMergeViewer">
+         <description>
+            %org.eclipse.compare.contentmergeviewer.TextMergeViewer
+         </description>
       </themeElementCategory>
       <colorDefinition
             label="%compareIncomingColor.label"
