Move org.eclipse.help feature to eclipse.platform git repository
This is the addition part of
- https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/issues/3526

The feature is copied into this repository from
https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/tree/dc928ef206f23fc909c4a8839ed995f3848571f0/eclipse.platform.releng/features/org.eclipse.help-feature

--- a/ua/pom.xml
+++ b/ua/pom.xml
@@ -26,6 +26,7 @@
     <module>org.eclipse.help.base</module>
     <module>org.eclipse.help.ui</module>
     <module>org.eclipse.help.webapp</module>
+    <module>org.eclipse.help-feature</module>
     <module>org.eclipse.ua.tests</module>
     <module>org.eclipse.ua.tests.doc</module>
     <module>org.eclipse.ui.cheatsheets</module>
