--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -7,7 +7,7 @@
 #  https://www.eclipse.org/legal/epl-2.0/
 #
 #  SPDX-License-Identifier: EPL-2.0
-# 
+#
 #  Contributors:
 #     IBM Corporation - initial API and implementation
 #     Mike Morearty - Bug 271411
@@ -99,7 +99,7 @@ RelaunchLastAction_Error_encountered_attempting_to_relaunch_4=Error encountered 
 # @see Bug 105733 TVT 3.1 - TCT 531 - Poor grammar in "Run Eclipse Application" and "Profile Eclipse Application"
 #   - the following string is used to display the tooltip for run/debug/profile buttons and is
 #     the concatenation of "{mode} {configuration name}", for example "Run HelloWorld". In some languages
-#     this may need to be reversed to be translated properly. 
+#     this may need to be reversed to be translated properly.
 ##
 AbstractLaunchHistoryAction_0={0} {1}
 AbstractLaunchHistoryAction_1=Run
@@ -164,8 +164,8 @@ ModifyWatchpointAction_0=Error
 ModifyWatchpointAction_1=Failed to modify watchpoint
 LaunchShortcutsAction_1=(none applicable)
 ##
-# The following string is used to display launch histories using an integer mnemonic - i.e. 
-# "{number} {configuration name}". For example "1 HelloWorld". 
+# The following string is used to display launch histories using an integer mnemonic - i.e.
+# "{number} {configuration name}". For example "1 HelloWorld".
 ##
 LaunchConfigurationAction_0=&{0} {1}
 FindDialog_1=&Specify an element to select (? = any character, * = any String):
@@ -227,8 +227,9 @@ RunLastAction_0=&Run Last Launched
 RunLastAction_1=&Run
 RunLastAction_2=Run the selected resource or active editor
 RunLastAction_3=Run the previously launched application
+PasteWatchExpressionsActionLabel=Paste Expressions
 ##
-# The following string is used to display actions to open the launch dialog for 
+# The following string is used to display actions to open the launch dialog for
 # a specific mode - for example "Debug Configurations..."
 ##
 OpenLaunchDialogAction_1={0} Configurations...
@@ -238,3 +239,9 @@ VirtualFindAction_1=Unable to locate {0} in viewer
 ToggleBreakpointsTargetManager_defaultToggleTarget_name = Default
 ToggleBreakpointsTargetManager_defaultToggleTarget_description = Default
 BreakpointLabelDialog=Provide a custom label, or blank for the default label
+
+ExpressionPasteMultiButton=Multiple Expressions
+ExpressionPasteSingleButton=Single Expression
+ExpressionPasteTitle=Paste Multiline Expression
+ExpressionPasteDialog=You are pasting a multiline expression. Choose whether to paste it as a single combined expression or as separate multiple expressions.
+ExpressionPasteRemember=Remember my preference next time
