--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -30,7 +30,7 @@ ConsolePreferencePage_12=Displayed &tab width:
 ConsolePreferencePage_13=Tab width must be between 1 and 100 inclusive.
 ConsolePreferencePage_11=Back&ground color:
 ConsolePreferencePage_Interpret_control_characters=Interpret ASCII &control characters
-ConsolePreferencePage_Interpret_cr_as_control_character=Interpret Carriage &Return (\\r) as control character 
+ConsolePreferencePage_Interpret_cr_as_control_character=Interpret Carriage &Return (\\r) as control character
 ConsolePreferencePage_Enable_Word_Wrap_text=E&nable word wrap
 ConsoleElapsedTimeLabel=Elapsed Time Format (Choose 'None' to disable)
 ConsoleDefaultElapsedTimeFormat=%d:%02d:%02d
@@ -59,6 +59,7 @@ DebugPreferencePage_32=&Prompt for confirmation when disabling all breakpoints
 DebugPreferencePage_5=Prompt for confirmation when deleting all e&xpressions
 DebugPreferencePage_showValuesInline=Show debug values &inline on text editors (Experimental)
 DebugPreferencePage_PromptSkipBreakpoints=Prompt when launching application in debug mode with 'Skip Breakpoints' enabled
+DebugPreferencePage_PromptMultiExpressions=Select how multi-line expressions should be pasted in the 'Expressions View'
 
 LaunchingPreferencePage_1=&Build (if required) before launching
 LaunchingPreferencePage_2=Save required dirty editors before launching
