Fix feature copyright properties
-Remove license details that come from the license feature.

--- a/ua/org.eclipse.help-feature/feature.properties
+++ b/ua/org.eclipse.help-feature/feature.properties
@@ -29,14 +29,13 @@ description=Eclipse help system.
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
 Copyright (c) 2008, 2013 IBM Corporation and others.\n\
-
+\n\
 This program and the accompanying materials\n\
 are made available under the terms of the Eclipse Public License 2.0\n\
 which accompanies this distribution, and is available at\n\
-https://www.eclipse.org/legal/epl-2.0/
-
-SPDX-License-Identifier: EPL-2.0\n\
+https://www.eclipse.org/legal/epl-2.0/\n\
 \n\
+SPDX-License-Identifier: EPL-2.0\n
 Contributors:\n\
     IBM Corporation - initial API and implementation\n
 ################ end of copyright property ####################################
