Migrate main test suite of terminal tests to JUnit 5
Also adds missing test class to suites structure and makes Tycho build
execute that test suite instead of individual tests.

--- a/terminal/tests/org.eclipse.terminal.test/build.properties
+++ b/terminal/tests/org.eclipse.terminal.test/build.properties
@@ -19,3 +19,4 @@ bin.includes = META-INF/,\
                about.html
 src.includes = teamConfig/,\
                about.html
+pom.model.property.testClass = org.eclipse.terminal.test.AutomatedIntegrationSuite
