--- a/terminal/tests/org.eclipse.terminal.test/build.properties
+++ b/terminal/tests/org.eclipse.terminal.test/build.properties
@@ -16,7 +16,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.properties,\
                plugin.xml,\
-               about.html
+               about.html,\
+               test.xml
 src.includes = teamConfig/,\
                about.html
 pom.model.property.testClass = org.eclipse.terminal.test.AutomatedIntegrationSuite
