Allow Terminal console pages to be closed and have a page icon
Fixes https://github.com/eclipse-platform/eclipse.platform/issues/2420

--- a/debug/org.eclipse.debug.terminal/plugin.xml
+++ b/debug/org.eclipse.debug.terminal/plugin.xml
@@ -24,5 +24,15 @@
             label="Terminal">
       </consoleFactory>
    </extension>
+   <extension
+         point="org.eclipse.ui.console.consolePageParticipants">
+      <consolePageParticipant
+            class="org.eclipse.debug.terminal.TerminalConsolePageParticipant"
+            id="org.eclipse.debug.terminal.consolePageParticipant">
+         <enablement>
+            <test property="org.eclipse.ui.console.consoleTypeTest" value="terminalConsole"/>
+         </enablement>
+      </consolePageParticipant>
+   </extension>
 
 </plugin>
