Add missing description for prototype decorator.
The prototype label decorator did not provide a description. The
description box in the Label decoration was left empty in the preference
page. This commit adds a description to so that it appears in the
description box like the rest of the entries in the label decorations
preference page.

--- a/debug/org.eclipse.debug.ui/plugin.properties
+++ b/debug/org.eclipse.debug.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2025 IBM Corporation and others.
+# Copyright (c) 2000, 2026 IBM Corporation and others.
 #
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
@@ -418,6 +418,7 @@ debug.core.component.label = Platform Debug Core
 GroupLaunch.description=Launch several other configurations sequentially
 
 prototype.decorator.label = Prototype Decorator
+prototype.decorator.description = Decorates launch configurations that are marked as prototypes with an overlay icon.
 breakpointLabel.label= Label
 breakpointLabel.tooltip= Provide a custom label to quickly identify breakpoint
 breakpointLabelCommand = EditBreakpointLabel
