--- a/debug/org.eclipse.debug.ui/plugin.xml
+++ b/debug/org.eclipse.debug.ui/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <!--
-     Copyright (c) 2005, 2025 IBM Corporation and others.
+     Copyright (c) 2005, 2026 IBM Corporation and others.
 
      This program and the accompanying materials
      are made available under the terms of the Eclipse Public License 2.0
@@ -3385,6 +3385,9 @@ M4 = Platform-specific fourth key
             lightweight="true"
             location="TOP_RIGHT"
             state="true">
+         <description>
+            %prototype.decorator.description
+         </description>
          <enablement>
             <objectClass
                   name="org.eclipse.debug.internal.core.LaunchConfiguration">
