--- a/terminal/bundles/org.eclipse.terminal.view.ui/plugin.xml
+++ b/terminal/bundles/org.eclipse.terminal.view.ui/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <!--
-    Copyright (c) 2018 Red Hat and others.
+    Copyright (c) 2018, 2026 Red Hat and others.
     This program and the accompanying materials
     are made available under the terms of the Eclipse Public License 2.0
     which accompanies this distribution, and is available at
@@ -120,7 +120,7 @@
       </delegate>
    </extension>
    <extension point="org.eclipse.ui.menus">
-      <menuContribution locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+      <menuContribution locationURI="toolbar:org.eclipse.ui.main.toolbar?after=org.eclipse.debug.ui.launchActionSet">
          <toolbar
                id="org.eclipse.terminal.view.ui.toolbar"
                label="%toolbar.terminal.label">
