Build org.eclipse.core.tools feature
Part of https://github.com/eclipse-platform/eclipse.platform/issues/2457

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -23,7 +23,7 @@
 
   <modules>
     <module>bundles</module>
-    <module>features/org.eclipse.core.runtime.feature</module>
+    <module>features</module>
     <module>tests</module>
   </modules>
 
