Add splash to o.e.sdk Plug-in and update it in new dev-cycle preparation
The org.eclipse.sdk branding-plugin was missing the splash-screen,
similar to the other branding-plugin org.eclipse.platform.
This enables the splash-screen when running the 'org.eclipse.sdk.ide'
product in launch configurations for secondary Eclipse instances.

Additionally the about-dialog branding-icon and the (now new)
splash-screen in org.eclipse.sdk weren't updated during the preparation
of a new development cycle, again like org.eclipse.platform.

--- a/platform/org.eclipse.sdk/build.properties
+++ b/platform/org.eclipse.sdk/build.properties
@@ -28,6 +28,7 @@ bin.includes = about.html,\
                plugin.properties,\
                plugin_customization.ini,\
                plugin_customization.properties,\
+               splash.png,\
                META-INF/,\
                book.css,\
                disabled_book.css,\
